[gd_scene load_steps=3 format=3 uid="uid://bwlrjueq4vv40"]

[ext_resource type="Script" path="res://scripts/journal/pager.gd" id="1_pbvs8"]
[ext_resource type="Theme" uid="uid://cfxt25d75fpp" path="res://themes/game.tres" id="2_w3sde"]

[node name="Pager" type="VBoxContainer"]
offset_right = 844.0
offset_bottom = 413.0
script = ExtResource("1_pbvs8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="PrevButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_w3sde")
theme_override_font_sizes/font_size = 36
text = "Prev"

[node name="NextButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_w3sde")
theme_override_font_sizes/font_size = 36
text = "Next"

[connection signal="pressed" from="HBoxContainer/PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
